--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                         <button class="quantity-btn plus" onclick="updateQuantity(${drink.id}, 1)">+</button>
                     </div>
                 </div>
-            `).join('');
+            `).join('');ˆ
     }
 
     function renderConfiguredDrinks() {
