--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Bar Kassensystem</title>
     <style>
         * {
@@ -149,7 +149,7 @@
         /* Drinks List */
         .drinks-list {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
             margin-bottom: 30px;
         }
@@ -159,7 +159,7 @@
             border: 3px solid #e9ecef;
             border-radius: 15px;
             padding: 20px;
-            display: flex;
+            display: block;
             align-items: center;
             gap: 20px;
             transition: all 0.3s ease;
@@ -173,7 +173,7 @@
         .drink-image {
             width: 70px;
             height: 70px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            box-shadow: 0 -5px 10px rgba(0,0,0,0.2);
             border-radius: 15px;
             display: flex;
             align-items: center;
@@ -182,6 +182,7 @@
             color: white;
             overflow: hidden;
             flex-shrink: 0;
+            margin: auto;
         }
 
         .drink-image img {
@@ -193,7 +194,8 @@
 
         .drink-info {
             flex: 1;
-            text-align: left;
+            text-align: center;
+            margin: auto;
         }
 
         .drink-name {
@@ -220,11 +222,10 @@
             width: 60px;
             height: 60px;
             border: none;
-            border-radius: 50%;
             font-size: 2rem;
             font-weight: bold;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.1s ease;
         }
 
         .quantity-btn.minus {
@@ -245,7 +246,7 @@
             font-size: 1.8rem;
             font-weight: bold;
             color: #2c3e50;
-            min-width: 40px;
+            min-width: 30px;
         }
 
         /* Order Summary */
@@ -328,9 +329,6 @@
         }
 
         @media (max-width: 768px) {
-            .drinks-list {
-                grid-template-columns: 1fr;
-            }
 
             .order-summary {
                 flex-direction: column;
@@ -338,7 +336,7 @@
             }
 
             .total-price {
-                font-size: 2.5rem;
+                font-size: 1.5rem;
             }
         }
     </style>
@@ -352,17 +350,10 @@
 
     <!-- Main Page -->
     <div class="content main-page">
-        <div class="drinks-list" id="drinksList">
-            <div class="empty-state">
-                <h3>Keine Getränke konfiguriert</h3>
-                <p>Klicken Sie auf Einstellungen, um Ihr erstes Getränk hinzuzufügen!</p>
-            </div>
-        </div>
-
+        <div class="drinks-list" id="drinksList"></div>
         <div class="order-summary">
             <div>
-                <div style="font-size: 1.2rem; margin-bottom: 10px;">Gesamt:</div>
-                <div class="total-price" id="totalPrice">€0,00</div>
+                <div style="font-size: 1.2rem; margin-bottom: 10px;">Gesamt: <span class="total-price" id="totalPrice">€0,00</span></div>
             </div>
             <button class="reset-btn" onclick="resetOrder()">löschen</button>
         </div>
@@ -372,57 +363,119 @@
     <div class="content config-page">
         <div class="config-form">
             <h2 style="margin-bottom: 30px; color: #2c3e50; font-size: 2rem;">Neues Getränk hinzufügen</h2>
-
             <div class="form-group">
                 <label for="drinkName">Name des Getränks:</label>
-                <input type="text" id="drinkName" placeholder="z.B. Bier, Wein, Cocktail">
+                <input type="text" id="drinkName" placeholder="z.B. Bier, Wein, Cocktail"/>
             </div>
-
             <div class="form-group">
                 <label for="drinkPrice">Preis (€):</label>
-                <input type="number" id="drinkPrice" step="0.01" placeholder="z.B. 4,50 oder -0,50 für Rückgabe">
+                <input type="number" id="drinkPrice" step="0.01" placeholder="z.B. 4,50 oder -0,50 für Rückgabe"/>
             </div>
-
             <div class="form-group">
-                <label for="drinkImage">Bild (optional):</label>
-                <input type="file" id="drinkImage" accept="image/*" style="padding: 15px;">
+                <label for="drinkEmoji">Emoji auswählen:</label>
+                <select id="drinkEmoji" style="padding: 15px; font-size: 1.5rem;">
+                    <option value="🍺">🍺</option>
+                    <option value="🍺🚫">🍺🚫</option>
+                    <option value="🍷">🍷</option>
+                    <option value="🥃">🥃</option>
+                    <option value="🥂">🥂</option>
+                    <option value="🍸">🍸</option>
+                    <option value="🫙">🫙</option>
+                    <option value="🚰">🚰</option>
+                    <option value="🍹">🍹</option>
+                    <option value="🍾">🍾</option>
+                    <option value="🧃">🧃</option>
+                    <option value="🥤">🥤</option>
+                    <option value="🧋">🧋</option>
+                    <option value="☕">☕</option>
+                    <option value="🫗">🫗</option>
+                    <option value="🫗">🫗</option>
+                </select>
             </div>
-
             <button class="btn btn-primary" onclick="addDrink()">✅ Getränk hinzufügen</button>
         </div>
-
-        <div class="configured-drinks" id="configuredDrinks">
-            <h3 style="margin-bottom: 20px; color: #2c3e50; font-size: 1.8rem;">Konfigurierte Getränke</h3>
-        </div>
-
+        <div class="configured-drinks" id="configuredDrinks"></div>
         <div style="text-align: center; margin-top: 30px;">
             <button class="btn btn-secondary" onclick="toggleView()">← Zurück zur Kasse</button>
+        </div>
+        <div style="text-align: center; margin-top: 30px;">
+            <button class="btn btn-danger" onclick="resetDefaultDrinks()">Getränkeliste zurücksetzen</button>
         </div>
     </div>
 </div>
 
 <script>
+    let defaultDrinks = [
+        {
+            "id": 1754314600229,
+            "name": "Bier",
+            "price": 5,
+            "emoji": "🍺"
+        },
+        {
+            "id": 1754314547340,
+            "name": "Limonade",
+            "price": 4.5,
+            "emoji": "🥤"
+        },
+        {
+            "id": 1754314508965,
+            "name": "Wasser",
+            "price": 3,
+            "emoji": "🚰"
+        },
+        {
+            "id": 1754314275641,
+            "name": "Schorle",
+            "price": 3.5,
+            "emoji": "🧃"
+        },
+        {
+            "id": 1754314569245,
+            "name": "Alk. freie Biere",
+            "price": 8,
+            "emoji": "🍺🚫"
+        },
+        {
+            "id": 1754314451815,
+            "name": "Schnaps",
+            "price": 2.5,
+            "emoji": "🥃"
+        },
+        {
+            "id": 1754314641597,
+            "name": "Pfand zurück",
+            "price": -2,
+            "emoji": "🫙"
+        }
+    ];
+
     let drinks = [];
     let order = {};
     let currentView = 'main';
 
-    // Load data from memory on page load
-    window.onload = function() {
+    window.onload = function () {
         loadDrinks();
         renderDrinks();
         renderConfiguredDrinks();
         updateTotal();
     };
 
-    function loadDrinks() {
-        // Initialize with empty array if no drinks exist
-        drinks = [];
-        order = {};
+    function saveDrinks() {
+        localStorage.setItem('drinks', JSON.stringify(drinks));
+        localStorage.setItem('order', JSON.stringify(order));
     }
 
-    function saveDrinks() {
-        // In a real app, this would save to localStorage
-        // For this demo, data persists only during the session
+    function loadDrinks() {
+        const savedDrinks = localStorage.getItem('drinks');
+        const savedOrder = localStorage.getItem('order');
+        drinks = savedDrinks ? JSON.parse(savedDrinks) : defaultDrinks;
+        order = savedOrder ? JSON.parse(savedOrder) : {};
+        drinks.forEach(drink => {
+            if (!(drink.id in order)) {
+                order[drink.id] = 0;
+            }
+        });
     }
 
     function toggleView() {
@@ -443,7 +496,7 @@
     function addDrink() {
         const name = document.getElementById('drinkName').value.trim();
         const price = parseFloat(document.getElementById('drinkPrice').value);
-        const imageFile = document.getElementById('drinkImage').files[0];
+        const emoji = document.getElementById('drinkEmoji').value;
 
         if (!name || isNaN(price)) {
             alert('Bitte füllen Sie den Getränkenamen und Preis aus!');
@@ -454,23 +507,9 @@
             id: Date.now(),
             name: name,
             price: price,
-            image: null
+            emoji: emoji
         };
 
-        // Handle image upload
-        if (imageFile) {
-            const reader = new FileReader();
-            reader.onload = function(e) {
-                drink.image = e.target.result;
-                finishAddingDrink(drink);
-            };
-            reader.readAsDataURL(imageFile);
-        } else {
-            finishAddingDrink(drink);
-        }
-    }
-
-    function finishAddingDrink(drink) {
         drinks.push(drink);
         order[drink.id] = 0;
 
@@ -481,7 +520,7 @@
         // Clear form
         document.getElementById('drinkName').value = '';
         document.getElementById('drinkPrice').value = '';
-        document.getElementById('drinkImage').value = '';
+        document.getElementById('drinkEmoji').value = '🍺';
     }
 
     function removeDrink(id) {
@@ -498,30 +537,28 @@
 
         if (drinks.length === 0) {
             container.innerHTML = `
-                    <div class="empty-state">
-                        <h3>No drinks configured</h3>
-                        <p>Click the Config button to add your first drink!</p>
-                    </div>
-                `;
+        <div class="empty-state">
+          <h3>Noch keine Getränke konfiguriert</h3>
+          <p>Klicke auf das Zahnrad Symbol!</p>
+        </div>`;
             return;
         }
 
         container.innerHTML = drinks.map(drink => `
-                <div class="drink-item">
-                    <div class="drink-image">
-                        ${drink.image ? `<img src="${drink.image}" alt="${drink.name}">` : '🥤'}
-                    </div>
-                    <div class="drink-info">
-                        <div class="drink-name">${drink.name}<br/>€${drink.price.toFixed(2)}</div>
-                    </div>
-
-                    <div class="quantity-controls">
-                        <button class="quantity-btn minus" onclick="updateQuantity(${drink.id}, -1)">−</button>
-                        <div class="quantity-display">${order[drink.id] || 0}</div>
-                        <button class="quantity-btn plus" onclick="updateQuantity(${drink.id}, 1)">+</button>
-                    </div>
-                </div>
-            `).join('');ˆ
+      <div class="drink-item">
+        <div class="drink-image">
+          ${drink.emoji || '🥤'}
+        </div>
+        <div class="drink-info">
+          <div class="drink-name">${drink.name}<br/>€${drink.price.toFixed(2)}</div>
+        </div>
+        <br/>
+        <div class="quantity-controls">
+          <button class="quantity-btn minus" onclick="updateQuantity(${drink.id}, -1)">−</button>
+          <div class="quantity-display">${order[drink.id] || 0}</div>
+          <button class="quantity-btn plus" onclick="updateQuantity(${drink.id}, 1)">+</button>
+        </div>
+      </div>`).join('');
     }
 
     function renderConfiguredDrinks() {
@@ -533,33 +570,29 @@
         }
 
         const drinksHTML = drinks.map(drink => `
-                <div class="configured-drink">
-                    <div class="drink-info">
-                        <div style="width: 40px; height: 40px; border-radius: 8px; overflow: hidden; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); display: flex; align-items: center; justify-content: center; color: white; font-size: 1.2rem;">
-                            ${drink.image ? `<img src="${drink.image}" alt="${drink.name}" style="width: 100%; height: 100%; object-fit: cover; border-radius: 8px;">` : '🥤'}
-                        </div>
-                        <div class="drink-info-text">
-                            <strong>${drink.name}</strong>
-                            <span style="color: #667eea;">€${drink.price.toFixed(2)}</span>
-                        </div>
-                    </div>
-                    <button class="btn btn-danger" style="padding: 10px 20px; font-size: 1rem;" onclick="removeDrink(${drink.id})">🗑️ Entfernen</button>
-                </div>
-            `).join('');
+      <div class="configured-drink">
+        <div class="drink-info">
+          <div style="width: 40px; height: 40px; border-radius: 8px; overflow: hidden; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); display: flex; align-items: center; justify-content: center; color: white; font-size: 1.2rem;">
+            ${drink.emoji || '🥤'}
+          </div>
+          <div class="drink-info-text">
+            <strong>${drink.name}</strong>
+            <span style="color: #667eea;">€${drink.price.toFixed(2)}</span>
+          </div>
+        </div>
+        <button class="btn btn-danger" style="padding: 10px 20px; font-size: 1rem;" onclick="removeDrink(${drink.id})">🗑️ Entfernen</button>
+      </div>`).join('');
 
         container.innerHTML = `
-                <h3 style="margin-bottom: 20px; color: #2c3e50; font-size: 1.8rem;">Konfigurierte Getränke</h3>
-                ${drinksHTML}
-            `;
+      <h3 style="margin-bottom: 20px; color: #2c3e50; font-size: 1.8rem;">Konfigurierte Getränke</h3>
+      ${drinksHTML}`;
     }
 
     function updateQuantity(drinkId, change) {
         if (!order[drinkId]) order[drinkId] = 0;
         order[drinkId] += change;
-
-        // Don't allow negative quantities
         if (order[drinkId] < 0) order[drinkId] = 0;
-
+        saveDrinks();
         renderDrinks();
         updateTotal();
     }
@@ -572,17 +605,25 @@
                 total += drink.price * order[drinkId];
             }
         }
-
         document.getElementById('totalPrice').textContent = `€${total.toFixed(2).replace('.', ',')}`;
     }
 
     function resetOrder() {
-        // Reset all order quantities to 0
         Object.keys(order).forEach(drinkId => {
             order[drinkId] = 0;
         });
+        saveDrinks();
         renderDrinks();
         updateTotal();
+    }
+
+    function resetDefaultDrinks() {
+        if (window.confirm('Getränkeliste wirklich zurücksetzen? Neu hinzugefügte Getränke gehen verloren.')) {
+            drinks = defaultDrinks;
+            saveDrinks();
+            renderDrinks();
+            renderConfiguredDrinks();
+        }
     }
 </script>
 </body>
