--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <button class="btn-delete" onclick="resetOrder()">🗑️ Löschen</button>
 </div>
 
-<script>
+<script>^
     let drinks = [];
     let order = {};
     let view = 'main';
